--- a/car-dealership-website/frontend/internship.html
+++ b/car-dealership-website/frontend/internship.html
@@ -19,7 +19,7 @@
         <h2 class="page-title">Internship: Build a Car Dealership Website</h2>
         <p style="color:var(--muted);max-width:760px">This short 10-day internship project helps you learn practical front-end & basic back-end skills: responsive layouts, search & filters, gallery handling, and a contact flow. Submit a GitHub repo and a live deployment (Netlify/Vercel/GitHub Pages).</p>
       </div>
-      <div style="flex:0 0 260px"><img src="https://images.unsplash.com/photo-1511914288736-3e486c41d5f0?q=80&w=800&auto=format&fit=crop" alt="Internship" style="width:100%;border-radius:12px;object-fit:cover;height:120px"></div>
+      <div style="flex:0 0 260px"><img src="https://images.unsplash.com/photo-1503376780353-7e6692767b70?auto=format&fit=crop&q=80&w=800" alt="Internship" style="width:100%;border-radius:12px;object-fit:cover;height:120px"></div>
     </section>
 
     <div style="margin-top:20px;display:flex;gap:20px;flex-wrap:wrap">
