--- a/car-dealership-website/frontend/contact.html
+++ b/car-dealership-website/frontend/contact.html
@@ -19,7 +19,7 @@
         <h2 class="page-title">Contact Us</h2>
         <p style="color:var(--muted);max-width:720px">Have a question about a car, need help with financing, or want to schedule a test drive? Send us a message or reach out using the details to the right. We usually respond within 24 hours.</p>
       </div>
-      <div style="flex:0 0 300px"><img src="https://images.unsplash.com/photo-1511914288736-3e486c41d5f0?q=80&w=1200&auto=format&fit=crop" alt="Contact us" style="width:100%;border-radius:8px;object-fit:cover;height:140px"></div>
+      <div style="flex:0 0 300px"><img src="https://images.unsplash.com/photo-1503376780353-7e6692767b70?auto=format&fit=crop&q=80&w=1200" alt="Contact us" style="width:100%;border-radius:8px;object-fit:cover;height:140px"></div>
     </section>
 
     <section class="contact-layout" style="margin-top:18px">
